{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 34,
  "lineage": "54c7c017-47fb-310c-84bb-8591d52ffdfb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-03-14T08:09:41.028-07:00",
            "enable_cdn": false,
            "fingerprint": "qAWYtVFA9i8=",
            "health_checks": [
              "projects/crafty-plateau-305800/global/httpHealthChecks/cloudafterdark-healthcheck"
            ],
            "id": "projects/crafty-plateau-305800/global/backendServices/cloudafterdark-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "cloudafterdark-service",
            "port_name": "http",
            "project": "crafty-plateau-305800",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/backendServices/cloudafterdark-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "depends_on": [
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_fw",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-2000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-03-14T08:09:28.800-07:00",
            "deny": [],
            "description": "Creates firewall rule for target instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/crafty-plateau-305800/global/firewalls/cloudafterdarktest",
            "log_config": [],
            "name": "cloudafterdarktest",
            "network": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/networks/default",
            "priority": 1000,
            "project": "crafty-plateau-305800",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/firewalls/cloudafterdarktest",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.147.138",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-03-14T08:09:28.815-07:00",
            "id": "projects/crafty-plateau-305800/global/addresses/crafty-plateau-305800-address",
            "name": "crafty-plateau-305800-address",
            "prefix_length": 0,
            "project": "crafty-plateau-305800",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/addresses/crafty-plateau-305800-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mannycompute1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20210223",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/zones/us-east1-b/disks/cloudafterdarkwebserver2021"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/crafty-plateau-305800/zones/us-east1-b/instances/cloudafterdarkwebserver2021",
            "instance_id": "1427059379003431366",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "emanuelburgess:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDCod6lUgER+CjS2oWXr1gLNHxjCE5DMGUis7XGhSOEcbz0V9uXXdrYJa/oY4HabjmRj90Cs4pa31C1jiWFK7AxZBI9A6Mm6MyVbTy6cE8n1e+Kdag2cQQ1Xyw4QgFysJX2NcVfK8mR77bPOorUJHJASCCqNg54NkVPjo4zBk6LvGpyro45ftStBZuKanUgRqw+mChEMJ81EGVsKckqlJx2poF+jpCymI1bhinRn3YqN6WS4NDfMr/RJMYSh5HfkHsru8QF2YO2Z8WntS1Zq/DikeOsIzGFbA5rNj46U2aiAiVzZIkJlNCntWl7yta8OwrfS5tAUn2dys4YYdgnyS0RY26RNwOIsKEEOKESiIRoASEDexSTry1U9npV6x1M3ytUPAqGKeLmkUne9ennJqbqmUpqkmr1Kl93v2 [...]
            },
            "metadata_fingerprint": "cIcuw9a8h1Q=",
            "metadata_startup_script": "#!/bin/bash\n\n#update all packages\nsudo apt update -y\n\n#install apache 2\nsudo apt install apache2 -y\n\n#start server\nsudo service apache2 start",
            "name": "cloudafterdarkwebserver2021",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.75.107.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/networks/default",
                "network_ip": "10.142.0.33",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/regions/us-east1/subnetworks/default",
                "subnetwork_project": "crafty-plateau-305800"
              }
            ],
            "project": "crafty-plateau-305800",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/zones/us-east1-b/instances/cloudafterdarkwebserver2021",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mannycompute2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20210223",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/zones/us-east1-b/disks/cloudafterdarkwebserver2022"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/crafty-plateau-305800/zones/us-east1-b/instances/cloudafterdarkwebserver2022",
            "instance_id": "6300545953592220102",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "emanuelburgess:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDCod6lUgER+CjS2oWXr1gLNHxjCE5DMGUis7XGhSOEcbz0V9uXXdrYJa/oY4HabjmRj90Cs4pa31C1jiWFK7AxZBI9A6Mm6MyVbTy6cE8n1e+Kdag2cQQ1Xyw4QgFysJX2NcVfK8mR77bPOorUJHJASCCqNg54NkVPjo4zBk6LvGpyro45ftStBZuKanUgRqw+mChEMJ81EGVsKckqlJx2poF+jpCymI1bhinRn3YqN6WS4NDfMr/RJMYSh5HfkHsru8QF2YO2Z8WntS1Zq/DikeOsIzGFbA5rNj46U2aiAiVzZIkJlNCntWl7yta8OwrfS5tAUn2dys4YYdgnyS0RY26RNwOIsKEEOKESiIRoASEDexSTry1U9npV6x1M3ytUPAqGKeLmkUne9ennJqbqmUpqkmr1Kl93v2 [...]
            },
            "metadata_fingerprint": "cIcuw9a8h1Q=",
            "metadata_startup_script": "#!/bin/bash\n\n#update all packages\nsudo apt update -y\n\n#install apache 2\nsudo apt install apache2 -y\n\n#start server\nsudo service apache2 start",
            "name": "cloudafterdarkwebserver2022",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.231.21.15",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/networks/default",
                "network_ip": "10.142.0.32",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/regions/us-east1/subnetworks/default",
                "subnetwork_project": "crafty-plateau-305800"
              }
            ],
            "project": "crafty-plateau-305800",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/zones/us-east1-b/instances/cloudafterdarkwebserver2022",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-14T08:10:04.838-07:00",
            "id": "projects/crafty-plateau-305800/global/targetHttpProxies/cloudafterdark-proxy",
            "name": "cloudafterdark-proxy",
            "project": "crafty-plateau-305800",
            "proxy_id": 568960282318313891,
            "self_link": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/targetHttpProxies/cloudafterdark-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/urlMaps/url-map"
          },
          "depends_on": [
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-03-14T08:09:52.905-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/backendServices/cloudafterdark-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "55s69l4k1-g=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "mysite.com"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/crafty-plateau-305800/global/urlMaps/url-map",
            "map_id": 228416397047470511,
            "name": "url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/backendServices/cloudafterdark-service",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/backendServices/cloudafterdark-service",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "crafty-plateau-305800",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crafty-plateau-305800/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_backend_service.default"
          ]
        }
      ]
    }
  ]
}